[NO-JIRA] Fix quality flaws after migrating to Java 17 (#542)
* Convert Collectors.toList() to Stream.toList()
* Fix quality flaws in Dockerfile
* Migrate multi-line concatenation with text blocks where trivial