@@ -19,16 +19,15 @@
  */
 package org.sonarsource.slang.impl;
 
+import java.util.ArrayList;
+import java.util.List;
+import javax.annotation.CheckForNull;
+import javax.annotation.Nullable;
 import org.sonarsource.slang.api.MatchCaseTree;
 import org.sonarsource.slang.api.TextRange;
 import org.sonarsource.slang.api.Token;
 import org.sonarsource.slang.api.Tree;
 import org.sonarsource.slang.api.TreeMetaData;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nullable;
 
 public class MatchCaseTreeImpl extends BaseTreeImpl implements MatchCaseTree {
 
@@ -63,7 +62,7 @@ public class MatchCaseTreeImpl extends BaseTreeImpl implements MatchCaseTree {
     List<TextRange> tokenRangesBeforeBody = metaData().tokens().stream()
       .map(Token::textRange)
       .filter(t -> t.start().compareTo(bodyRange.start()) < 0)
-      .collect(Collectors.toList());
+      .toList();
 
     // for ruby when body is empty, "when expr" is body meta, so there is nothing before
     if (tokenRangesBeforeBody.isEmpty()) {
