@@ -19,15 +19,14 @@
  */
 package org.sonarsource.slang.checks;
 
+import java.util.List;
+import org.sonar.check.Rule;
+import org.sonar.check.RuleProperty;
 import org.sonarsource.slang.api.FunctionDeclarationTree;
 import org.sonarsource.slang.checks.api.InitContext;
 import org.sonarsource.slang.checks.api.SecondaryLocation;
 import org.sonarsource.slang.checks.api.SlangCheck;
 import org.sonarsource.slang.checks.complexity.CognitiveComplexity;
-import java.util.List;
-import java.util.stream.Collectors;
-import org.sonar.check.Rule;
-import org.sonar.check.RuleProperty;
 
 @Rule(key = "S3776")
 public class FunctionCognitiveComplexityCheck implements SlangCheck {
@@ -56,7 +55,7 @@ public class FunctionCognitiveComplexityCheck implements SlangCheck {
           threshold);
         List<SecondaryLocation> secondaryLocations = complexity.increments().stream()
           .map(FunctionCognitiveComplexityCheck::secondaryLocation)
-          .collect(Collectors.toList());
+          .toList();
         Double gap = (double) complexity.value() - threshold;
         ctx.reportIssue(tree::rangeToHighlight, message, secondaryLocations, gap);
       }
